# cougardegree

./: .gitignore  ACCURATE_DATA_UPDATE.md  BACKLOG.md  CNAME  DATABASE_STRATEGY.md  DATA_SOURCES.md  DEGREE_VERIFICATION_REPORT.md  DEVELOPMENT_ROADMAP.md  FRONTEND_GUIDE.md  GETTING_STARTED.md  HOW_TO_START.md  IMPLEMENTATION_SUMMARY.md  POWERSHELL_COMMANDS.md  QUICKSTART.md  README.md  START_HERE.md  TRY_IT_OUT.md  YOUR_SETUP.md  _config.yml  package-lock.json  pyproject.toml  setup_gemini.md  start.bat  start.ps1  test-frontend-backend.html
backend/: .env  .env.example  README.md  app.py  auto-fill-electives.js  configure-ai.js  diagnose.js  find-agent-endpoint.js  package-lock.json  package.json  server.js  setup-agent.js  test-agent-endpoints.js  test-ai-endpoint.js  test-api.js  test-detailed.js  test-scheduler.js  validate-data.js  verify-degrees.js
backend/degrees/: accounting_bba.json  arch_barch.json  art_bfa.json  atmosphere_bs.json  bio_ba.json  bio_bs.json  bio_bs_ACCURATE.json  biochem_ba.json  biochem_bs.json  biomed_bs.json  chem_ba.json  chem_bs.json  chemen_bs.json  cis_bs.json  civil_bs.json  comm_ba.json  compeng_bs.json  cosc_bs.json  cosc_bs_ACCURATE.json  economics_ba.json  economics_bs.json  eleceng_bs.json  english_ba.json  envsci_bs.json  exsc_healthprof_bs.json  exsc_primary_bs.json  finance_bba.json  fitness_bs.json  geophys_bs.json  history_ba.json  induseng_bs.json  management_bba.json  marketing_bba.json  (+19 more)
frontend/: app.js  index.html  package-lock.json  package.json  script.js  server.js  styles.css
tests/: test_scheduler.py
(+20 files in other folders)
